--- a/scss/sections/_contacto.scss
+++ b/scss/sections/_contacto.scss
@@ -46,6 +46,17 @@
                 font-size: 20px;
                 font-weight: 600;
                 top: 32px;
+                margin-bottom: 2rem;
+            }
+
+            .err-p{
+                font-size: 15px;
+                color: red;
+                position: relative;
+                top: 0rem;
+                margin: 0;
+                padding: 0;
+
             }
 
             form input, textarea{
