--- a/scss/sections/_inicio.scss
+++ b/scss/sections/_inicio.scss
@@ -95,7 +95,7 @@ padding: 0;
     align-items: center;
     margin: 0;
     height: 250px;
-    background:linear-gradient(rgba(0, 0, 0, 0.563), rgba(0, 0, 0, 0.601)), url('https://cdn.discordapp.com/attachments/1228542950636781569/1232881116734820363/BANER-FONDO-HOME.jpg?ex=662b1184&is=6629c004&hm=9d51fbea8bdec887c84523dddb840c2912aad9c1d3ea86ce1313c06ab22fcab0&');
+    background:linear-gradient(rgba(0, 0, 0, 0.563), rgba(0, 0, 0, 0.601)), url('https://res.cloudinary.com/dfnton7oq/image/upload/v1714697155/samples/bocata-imgs/BANER-FONDO-HOME_w2phog.jpg');
     background-position: top;
     background-attachment: fixed;
 
@@ -235,7 +235,7 @@ padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  background:linear-gradient(rgba(0, 0, 0, 0.563), rgba(0, 0, 0, 0.601)), url('https://images.unsplash.com/photo-1578916171728-46686eac8d58?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+  background:linear-gradient(rgba(0, 0, 0, 0.563), rgba(0, 0, 0, 0.601)), url('https://res.cloudinary.com/dfnton7oq/image/upload/v1714699305/samples/bocata-imgs/photo-1578916171728-46686eac8d58_r8vqa9.avif');
   background-attachment: fixed;
   height: 200px;
 
