--- a/scss/sections/_contacto.scss
+++ b/scss/sections/_contacto.scss
@@ -2,6 +2,7 @@
     position: relative;
     display: flex;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 
     svg{
         position: absolute;
