--- a/scss/sections/_nav.scss
+++ b/scss/sections/_nav.scss
@@ -35,6 +35,10 @@
     --bs-nav-link-hover-color:rgb(255 255 255 / 80%);
   }
 
+  .navbar-nav .nav-link.active, .navbar-nav .nav-link.show{
+    color: #ffffffcc;
+  }
+
   .nav-link:focus{
     color: $c_blanco;
   }
